--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>sticky-note-vue</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
